# genicons

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: build.yml  ci.yml  main.yml  prod.yml  stage.yml
api/: .dockerignore  Dockerfile  Dockerfile.single  gunicorn.conf.py  main.py  ml_manager.py  pyproject.toml  requirements.txt
api/app/: gunicorn.conf.py  logging.yaml  main.py
api/app/crud/: product.py  user.py
api/app/db/: db_init.py  models.py  session.py
api/app/models/: product.py
api/app/module/: dependency.py  ml.py  ml_caller.py  schema.py  utility.py
api/app/router/: generator.py  giver.py
api/app/schemas/: product.py
api/app/test/: pytest.ini  test_generator.py  test_giver.py  test_main.py
api/app/test/schema/: schema_generator.py  schema_giver.py
api/crud/: user.py
api/db/: db_init.py
api/models/: product.py
api/router/: input.py  output.py
api/schemas/: product.py  user.py
app/: docker-compose.yml
app/backend/: docker-compose.yml  main.py
backend/: docker-compose.yml
backend/fastapi/: Dockerfile  Dockerfile.tmp  _.py  gunicorn.py  main.py  requirements.txt
doc/: memo.md
fastapi/: .dockerignore  .env.init  Dockerfile  alembic.ini  main.py  pyproject.toml
fastapi/app/: base.py
fastapi/app/alembic/: env.py
fastapi/app/alembic/versions/: 0061ed22f5d6_new_tables.py  04b83e6636a9_.py  3f536067e13d_modify_tables.py  5a42fb0de244_increment_password_column.py  678e35c47327_add_password_to_users_table.py  9e3c281849cc_create_tables.py  f4a3acfa3464_create_tables.py
fastapi/app/api/crud/: product.py  user.py
fastapi/app/api/module/: auth.py  dependency.py  genicon_caller.py  ml_caller.py  send.py  util.py  utility.py
fastapi/app/api/router/: generator.py  giver.py  management.py  token.py
fastapi/app/api/schema/: product.py  user.py
fastapi/app/core/: config.py
fastapi/app/db/: db_init.py  models.py  session.py
fastapi/app/test/: conftest.py  pytest.ini  test_generator.py  test_giver.py
fastapi/app/test/schema/: schema_generator.py  schema_giver.py
fastapi/log/: logging.yaml
frontend/: main.js
frontend/axios/: index.js
nuxt/: .eslintrc  app.vue  nuxt.config.js  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
nuxt/components/: TheFooter.vue  TheHeader.vue
nuxt/composables/: useAuth.ts  useContacts.ts  useIndex.ts  useProducts.ts  useRegister.ts
sql/: .env.init  Dockerfile  setup.sh
tensorflow/: .env.init  main.py  pyproject.toml
tensorflow/app/: config.py  db.py  router.py  util.py
tmp/: dev-env-setup.sh
(+59 files in other folders)
