[tool.poetry]
name = "genicons-api-requirements"
version = "0.1.0"
description = ""
authors = ["terib0l <taiyakiou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
PyYAML = "^6.0"
python-dotenv = "^0.19.2"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.29"
aiofiles = "^0.8.0"
requests = "^2.27.1"
SQLAlchemy-Utils = "^0.38.2"
mysqlclient = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-env = "^0.6.2"
pynvim = "^0.4.3"
jsonschema = "^4.3.3"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
