[tool.poetry]
name = "genicons-api-requirements"
version = "0.1.0"
description = ""
authors = ["terib0l <taiyakiou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
PyYAML = "^6.0"
python-dotenv = "^0.19.2"
python-multipart = "^0.0.5"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.39"}
aiofiles = "^0.8.0"
requests = "^2.27.1"
SQLAlchemy-Utils = "^0.38.2"
mysqlclient = "^2.1.0"
alembic = "^1.8.0"
pydantic = {extras = ["email"], version = "^1.9.1"}
aiomysql = "^0.1.1"
pytest-asyncio = "^0.19.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-env = "^0.6.2"
pynvim = "^0.4.3"
jsonschema = "^4.3.3"
Faker = "^13.15.1"
httpx = "^0.23.0"
pyOpenSSL = "^22.0.0"
Pillow = "^9.2.0"

[tool.pytest.ini_options]
log_cli = "True"
log_format = "%(levelname)s %(message)s"
log_level = "INFO"
addopts = "-p no:warnings"
python_files = [
  "test_generator.py",
  "test_giver.py",
]
markers = [
  "generate_user",
  "generate_product",
  "send_contact",
  "fetch_product_ids",
  "fetch_product_origins",
  "fetch_product",
  "fetch_gallery",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
